--- a/conf/model/monads/generation/grid.yaml
+++ b/conf/model/monads/generation/grid.yaml
@@ -7,3 +7,4 @@ height: 1 # int, y coord dimension
 depth: 1 # int, z coord dimension
 inclusive: true
 order: x # swizzled from 'xyz'
+persistent: true
