--- a/conf/examples/train_CelebA/data.yaml
+++ b/conf/examples/train_CelebA/data.yaml
@@ -20,6 +20,12 @@ data:
             interpolation: 2
             always_apply: true
             p: 1.0
+          normalize:
+            mean: 0.5
+            std: 0.5
+            max_pixel_value: 255.0
+            always_apply: True
+            p: 1.0
         inputs: [color]
         outputs: [color]
       datasets:
@@ -48,6 +54,12 @@ data:
             width: 128
             interpolation: 2
             always_apply: true
+            p: 1.0
+          normalize:
+            mean: 0.5
+            std: 0.5
+            max_pixel_value: 1.0
+            always_apply: True
             p: 1.0
         inputs: [color]
         outputs: [color]
