--- a/conf/examples/train_CelebA/losses.yaml
+++ b/conf/examples/train_CelebA/losses.yaml
@@ -4,15 +4,17 @@ model:
   supervision:
     losses:
       std_kl:
-        mode: beta
-        beta: 4.0
-    L1:
+        mode: capacity
+        beta: 10.0
+        C_max: 25
+        C_max_iter: 10000
+    L2:
       gt: [color]
       pred: [generated]
-      out: [L1]
+      out: [L2]
 
     std_kl:
       mu: [mu]
       var: [logvar]
       out: [std_kl]
-      weight: [1.0]
+      weight: [0.0007]
