--- a/conf/examples/train_CelebA/options.yaml
+++ b/conf/examples/train_CelebA/options.yaml
@@ -2,8 +2,8 @@
 
 experiment:
   visdom_ip: localhost
-  name: CelebA_disentangled_betaVAE_exp
-  batch_size: 4
+  name: CelebA_disentanglement_VAE
+  batch_size: 144
   workers: 4
 
 trainer:
@@ -22,16 +22,15 @@ visualization:
     image2d:
       name: ${experiment.name}
       ip: ${experiment.visdom_ip}
-      batch_percentage: 1.0
+      batch_percentage: 0.05
       keys: [color, generated]
       types: [color, color]
       colormaps: [none, none]
       transforms: [ndc, ndc]
+  latent_visualizers:
     image_grid2d:
       name: ${experiment.name}
       ip: ${experiment.visdom_ip}
-      batch_percentage: 1.0
-      traversals: 7
       keys: [color_grid]
       types: [color_grid]
       colormaps: [none]
