--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,32 @@
 site_name: moai
+site_description: Accelerating modern data-driven workflows
+site_url: https://github.com/ai-in-motion/moai
 
 theme:
   name: material
+  palette:
+  - scheme: default
+    toggle:
+      icon: material/lightbulb-outline
+      name: Switch to light mode
+  - scheme: slate
+    toggle:
+      icon: material/lightbulb
+      name: Switch to dark mode
+  features:
+  - search.suggest
+  - search.highlight
+  icon:
+    repo: fontawesome/brands/github-alt
+  # logo: img/icon-white.svg
+  # favicon: img/favicon.png
+  language: en
+repo_name: ai-in-motion/moai
+repo_url: https://github.com/ai-in-motion/moai
+edit_uri: ''
+google_analytics:
+- UA-147231916-1
+- auto
 
 plugins:
   - search
@@ -25,10 +50,18 @@ plugins:
             - moai            
   
 markdown_extensions:
+  - toc:
+      permalink: true
   - abbr
   - admonition
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_div_format ''
+  - pymdownx.tabbed
+  - extra
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
@@ -48,14 +81,21 @@ markdown_extensions:
   - def_list
   - pymdownx.tasklist:
       custom_checkbox: true
+
+extra:
+  social:
+  - icon: fontawesome/brands/github-alt
+    link: https://github.com/ai-in-motion/moai    
+  - icon: fontawesome/brands/python
+    link: https://pypi.org/project/moai-mdk/
       
 extra_javascript:
   - javascripts/config.js
   - javascripts/keywords.js
-  - javascripts/datatabs.js #NOTE: update mkdocstrings and check if issue is fixed
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js  
+  - https://unpkg.com/mermaid@8.4.6/dist/mermaid.min.js
   
 extra_css:
   - stylesheets/keywords.css
@@ -65,3 +105,7 @@ extra_css:
 
 nav:
   - Introduction: index.md
+  - API:
+    - api/losses.md
+    - api/optimizers.md
+    - api/meta_optimizers.md
