fix rtd build fail

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,9 +63,9 @@ markdown_extensions:
   - pymdownx.tabbed
   - extra
   - attr_list
-  - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+  #- pymdownx.emoji:
+  #    emoji_index: !!python/name:materialx.emoji.twemoji
+  #    emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.highlight:
