--- a/conf/model/modules/highres/head/higher.yaml
+++ b/conf/model/modules/highres/head/higher.yaml
@@ -1,17 +1,17 @@
 # @package model.modules.head
 
 _target_: moai.modules.lightning.highres.HigherHead
+deconvolution_modules: 1
 deconvolution:
-  block: [deconv2d]
-  type: [deconv2d]
-  kernel_size: [4]
-  padding: [1]
-  output_padding: [0]
-  activation: [bn2d_relu]
-  deconv_out_features: [32]
-  concat: [true]
-  residual_units:
-    - 4
+  block: deconv2d
+  type: deconv2d
+  kernel_size: 4
+  padding: 1
+  output_padding: 0
+  activation: bn2d_relu
+  deconv_out_features: 32
+  concat: true
+  residual_units: 4
 residual:
   type: preactiv_bottleneck
   bottleneck_features: 64
