--- a/moai/conf/engine/visualization/visdom/image2d.yaml
+++ b/moai/conf/engine/visualization/visdom/image2d.yaml
@@ -4,8 +4,8 @@ _target_: moai.visualization.visdom.Image2d
 name: ${experiment.name}
 ip: "localhost" # pay attention this __NEEDS__ to be a "string"
 batch_percentage: 1.0
-keys: ???
-types: ???
-colormaps: ???
-transforms: ???
+keys: [color]
+types: [color]
+colormaps: [none]
+transforms: [none]
 
