--- a/moai/conf/data/cifar10.yaml
+++ b/moai/conf/data/cifar10.yaml
@@ -12,7 +12,7 @@ train:
     datasets:
       cifar10:
         _target_: moai.data.datasets.torchvision.CIFAR10
-        root_path: ${CIFAR10_root_path}
+        root_path: ${DATA_ROOT}
         download: true
         split: train
 
@@ -28,6 +28,6 @@ test:
     datasets:
       cifar10:
         _target_: moai.data.datasets.torchvision.CIFAR10
-        root_path: ${CIFAR10_root_path}
+        root_path: ${DATA_ROOT}
         download: true
         split: test
