--- a/moai/conf/examples/cifar100/play.yaml
+++ b/moai/conf/examples/cifar100/play.yaml
@@ -4,7 +4,7 @@ defaults:
   - engine/visualization/dataset: cifar
   - data: cifar100
 
-CIFAR100_root_path: ???
+DATA_ROOT: ???
 
 experiment:
   name: CIFAR100_playback
