--- a/moai/conf/examples/cifar10/play.yaml
+++ b/moai/conf/examples/cifar10/play.yaml
@@ -4,7 +4,7 @@ defaults:
   - engine/visualization/dataset: cifar
   - data: cifar10
 
-CIFAR10_root_path: ???
+DATA_ROOT: ???
 
 experiment:
   name: CIFAR10_playback
