--- a/moai/conf/model/networks/lightning/classification/resnet50.yaml
+++ b/moai/conf/model/networks/lightning/classification/resnet50.yaml
@@ -6,7 +6,7 @@ configuration:
     image: color
     out: prediction
 architecture:
-  _target_: torchvision.models.vgg11_bn
+  _target_: torchvision.models.resnet50
   pretrained: false
   progress: true
-  num_classes: 100
+  num_classes: ${NUM_CLASSES}
