--- a/moai/conf/model/networks/lightning/torchvision/architectures/shufflenet_v2_x1_5.yaml
+++ b/moai/conf/model/networks/lightning/torchvision/architectures/shufflenet_v2_x1_5.yaml
@@ -1,6 +1,6 @@
 # @package model.architecture
 
-_target_: torchvision.models.vgg19_bn
+_target_: torchvision.models.shufflenet_v2_x1_5
 pretrained: false
 progress: true
 num_classes: ${NUM_CLASSES}
