--- a/moai/conf/model/networks/lightning/torchvision/architectures/squeezenet_1.1.yaml
+++ b/moai/conf/model/networks/lightning/torchvision/architectures/squeezenet_1.1.yaml
@@ -1,6 +1,6 @@
 # @package model.architecture
 
-_target_: torchvision.models.vgg19_bn
+_target_: torchvision.models.squeezenet1_1
 pretrained: false
 progress: true
 num_classes: ${NUM_CLASSES}
