--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-hydra-core==1.0.3           #TODO: update (add omegaconf==2.0.2)
+omegaconf==2.0.2
+hydra-core==1.0.3           #TODO: update
 hydra-colorlog==1.0.0
-pytorch-lightning==1.0.7    #TODO: update
+pytorch-lightning==1.5.1    
 kornia==0.4.1               #TODO: update
 visdom
 hiplot==0.1.20
