--- a/moai/conf/examples/bodyfit/data.yaml
+++ b/moai/conf/examples/bodyfit/data.yaml
@@ -7,8 +7,7 @@ data:
     iterator:      
       datasets:
         openpose:
-          image_glob: ${openpose_root}\images\*.jpg
-          keypoints_glob: ${openpose_root}\keypoints\*.json
+          image_glob: ${openpose_root}\${FOLDER}\images\*.jpg
           load_face: true
           load_hands: true
           load_face_contour: false
@@ -19,8 +18,7 @@ data:
     iterator:
       datasets:
         openpose:
-          image_glob: ${openpose_root}\images\*.jpg
-          keypoints_glob: ${openpose_root}\keypoints\*.json
+          image_glob: ${openpose_root}\${FOLDER}\images\*.jpg
           load_face: true
           load_hands: true
           load_face_contour: false
@@ -30,8 +28,7 @@ data:
   val:
     iterator:
       openpose:
-          image_glob: ${openpose_root}\images\*.jpg
-          keypoints_glob: ${openpose_root}\keypoints\*.json
+          image_glob: ${openpose_root}\${FOLDER}\images\*.jpg
           load_face: true
           load_hands: true
           load_face_contour: false
