--- a/moai/conf/examples/bodyfit/data.yaml
+++ b/moai/conf/examples/bodyfit/data.yaml
@@ -7,7 +7,7 @@ data:
     iterator:      
       datasets:
         openpose:
-          image_glob: ${openpose_root}\${FOLDER}\images\*.jpg
+          image_glob: ${openpose_root}\${FOLDER}\images\*.jp*g
           load_face: true
           load_hands: true
           load_face_contour: false
@@ -18,7 +18,7 @@ data:
     iterator:
       datasets:
         openpose:
-          image_glob: ${openpose_root}\${FOLDER}\images\*.jpg
+          image_glob: ${openpose_root}\${FOLDER}\images\*.jp*g
           load_face: true
           load_hands: true
           load_face_contour: false
@@ -28,7 +28,7 @@ data:
   val:
     iterator:
       openpose:
-          image_glob: ${openpose_root}\${FOLDER}\images\*.jpg
+          image_glob: ${openpose_root}\${FOLDER}\images\*.jp*g
           load_face: true
           load_hands: true
           load_face_contour: false
