--- a/moai/conf/examples/bodyfit/global_orient.yaml
+++ b/moai/conf/examples/bodyfit/global_orient.yaml
@@ -1,6 +1,6 @@
 # @package model.monads._name_
 
-_target_: moai.monads.generation.tensor.Parameters
+_target_: moai.monads.generation.tensor.Parameter
 shape: 
   - ${data.train.loader.batch_size}
   - 3
