--- a/moai/conf/engine/visualization/visdom/blend2d.yaml
+++ b/moai/conf/engine/visualization/visdom/blend2d.yaml
@@ -6,5 +6,5 @@ ip: "localhost" # pay attention this __NEEDS__ to be a "string"
 left: ???
 right: ???
 blending: ??? # float
-colormaps: ???
-transforms: ???
+colormap: ???
+transform: ???
