--- a/moai/conf/examples/play_CelebA/options.yaml
+++ b/moai/conf/examples/play_CelebA/options.yaml
@@ -1,18 +1,17 @@
 # @package _global_
 
 experiment:
-  visdom_ip: localhost
   name: CelebA_dataset_vizualization
   batch_size: 1
-  workers: 4
+  workers: 1
 
 visualization:
   batch_interval: 1
   visualizers:
     image2d:
       name: ${experiment.name}
-      ip: ${experiment.visdom_ip}
-      keys: [color]
-      types: [color]
-      colormaps: [none]
-      transforms: [none]
+      ip: "localhost"
+      image: [color]
+      type: [color]
+      colormap: [none]
+      transform: [dataset]
