improved version of HanCo data loader
+custom loaders
+more efficient loading
* +fixed turbo issue (matplotlib) for colorization (comment for further updates)

--- a/moai/conf/examples/play_HanCo/data.yaml
+++ b/moai/conf/examples/play_HanCo/data.yaml
@@ -8,18 +8,18 @@ data:
       datasets:
         HanCo:
           root: ${HanCo_root}
-          data_types: ['color', 'mask_hand', 'mask_fg']
+          data_types: ['color', 'keypoints3D', 'keypoints2D', 'mano']
 
   test:
     iterator:
       datasets:
         HanCo:
           root: ${HanCo_root}
-          data_types: ['color', 'mask_hand', 'mask_fg']
+          data_types: ['color', 'keypoints3D', 'keypoints2D', 'mano']
 
   val:
     iterator:
       datasets:
         HanCo:
           root: ${HanCo_root}
-          data_types: ['color', 'mask_hand', 'mask_fg']
+          data_types: ['color', 'keypoints3D', 'keypoints2D', 'mano']
