--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-omegaconf==2.0.2
+omegaconf==2.0.2            #TODO: update
 hydra-core==1.0.3           #TODO: update
 hydra-colorlog==1.0.0
-pytorch-lightning==1.5.1    
+pytorch-lightning==1.5.1    #TODO: update
 kornia==0.4.1               #TODO: update
 visdom
-hiplot==0.1.20
+hiplot==0.1.20              #TODO: update
 opencv-python
-albumentations
+albumentations              #TODO: update
 matplotlib==3.3.4
 toolz
 tablib
