--- a/moai/conf/engine/checkpoint/lightning/default.yaml
+++ b/moai/conf/engine/checkpoint/lightning/default.yaml
@@ -4,7 +4,7 @@ _target_: pytorch_lightning.callbacks.ModelCheckpoint
 monitor: ??? # metric to monitor
 verbose: false
 save_weights_only: false
-mode: auto # auto or max or min depending on where the metric is an accuracy or error above (with auto it is determined by 'acc' or 'loss')
+mode: min # (PTL 1.5 removed auto) max or min depending on where the metric is an accuracy or error above (with auto it is determined by 'acc' or 'loss')
 #NOTE: @PTRL1.5 period: 1 # number of epochs between checkpoints
 #NOTE: @PTRL1.5 prefix: ${experiment.name}
 save_top_k: 3
