--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ omegaconf==2.0.2            #TODO: update
 hydra-core==1.0.3           #TODO: update
 hydra-colorlog==1.0.0
 pytorch-lightning==1.5.1    #TODO: update
-kornia==0.4.1               #TODO: update
+kornia==0.6.3
 visdom
 hiplot==0.1.20              #TODO: update
 opencv-python
