--- a/moai/conf/data/train/augmentation/albumentations/augmentations/resize.yaml
+++ b/moai/conf/data/train/augmentation/albumentations/augmentations/resize.yaml
@@ -1,6 +1,6 @@
 # @package data.train.iterator.augmentation.augmentations._name_
 
-_target_: albumentations.augmentations.transforms.Resize
+_target_: albumentations.augmentations.geometric.resize.Resize
 height: 512
 width: 1024
 interpolation: 2
