--- a/moai/conf/engine/visualization/visdom/feature2d.yaml
+++ b/moai/conf/engine/visualization/visdom/feature2d.yaml
@@ -3,7 +3,7 @@
 _target_: moai.visualization.visdom.Feature2d
 name: ${experiment.name}
 ip: "localhost" # pay attention this __NEEDS__ to be a "string"
-keys: ???
-types: ???
-colormaps: ???
-transforms: ???
+image: ???
+type: ???
+colormap: ???
+transform: ???
