--- a/moai/conf/examples/play_SSP3D/options.yaml
+++ b/moai/conf/examples/play_SSP3D/options.yaml
@@ -3,7 +3,7 @@
 experiment:
   visdom_ip: localhost
   name: SSP3D_viz
-  batch_size: 8
+  batch_size: 1
   workers: 1
 
 visualization:
@@ -27,9 +27,9 @@ visualization:
       images: [color]
       poses: [human_pose2d]
       gt: [keypoints]
-      pred: [joints2d]
+      pred: [openpose.keypoints]
       gt_masks: [confidence]
-      pred_masks: [confidence]
+      pred_masks: [openpose.confidence]
       pose_structure:
         - [0, 1, 3]
         - [0, 2, 4]
