--- a/moai/conf/model/monads/human/body/smplx.yaml
+++ b/moai/conf/model/monads/human/body/smplx.yaml
@@ -1,6 +1,6 @@
 # @package model.monads._name_
 
-_target_: moai.monads.human.body.SMPLX
+_target_: moai.monads.human.body.smpl.SMPLX
 model_path: ???
 joints_format: none
 gender: neutral
