--- a/moai/conf/model/monads/human/body/joint_regressor.yaml
+++ b/moai/conf/model/monads/human/body/joint_regressor.yaml
@@ -1,5 +1,5 @@
 # @package model.monads._name_
 
 _target_: moai.monads.human.body.JointRegressor
-weights_path: ???
+weights_path: null
 persistence: true
