--- a/moai/conf/examples/play_GeneBody/preproc.yaml
+++ b/moai/conf/examples/play_GeneBody/preproc.yaml
@@ -1,5 +1,7 @@
 # @package _global_
 
+selected_cam: '25'
+
 model:
   monads:
     ##################### START REDNER
@@ -16,23 +18,27 @@ model:
     # rotation3d:
     #   rotations: [180@y, 180@z]
     ##################### STOP REDNER
-    # ##################### START NVDIFFRAST
+    ##################### START NVDIFFRAST
     opengl:
       focal_length: [1498.22426237, 1498.22426237]
       principal_point: [790.263706, 578.90334]
-      width: 400 # 1600
-      height: 300 # 1200
+      width: 2448 # 1600
+      height: 2048 # 1200
       rotation: null
       translation: null
       persistent: true
     mesh_silhouette:      
-      width: 400 # 1600
-      height: 300 # 1200
+      width: 2448 # 1600
+      height: 2048 # 1200
       position_gradient_scale: 1.0
+    transform:
+      xyz_in_at: row
+      xyz_out_at: row
+      transpose: false
     rotation3d:
       rotations: [180@y, 180@z]
-    # ##################### STOP NVDIFFRAST
-    ##################### START PYTORCH3D
+    ##################### STOP NVDIFFRAST
+    # ##################### START PYTORCH3D
     # mesh_silhouette:      
     #   focal_length: [1498.22426237, 1498.22426237]
     #   principal_point: [790.263706, 578.90334]
@@ -46,7 +52,7 @@ model:
     #   raster_blur_radius: 1e-4
     # rotation3d:
     #   rotations: [180@x, 180@y]
-    ##################### STOP PYTORCH3D
+    # ##################### STOP PYTORCH3D
     bilinear_sampling:
       width: 400
       height: 300
@@ -57,8 +63,10 @@ model:
   feedforward:
     preprocess:
       bilinear_sampling:
-        image: [color]
-        out: [color_down_x2]
+        image: 
+          - images.${selected_cam}
+        out: 
+          - image_${selected_cam}_down2
       ##################### START REDNER
       # convert:
       #   rotation: [camera_rotation]
@@ -70,26 +78,36 @@ model:
       #   image: [color]
       #   out: [silhouette]
       ##################### STOP REDNER
-      # ##################### START NVDIFFRAST
+      ##################### START NVDIFFRAST
+      inverse:
+        x: 
+          - cameras.${selected_cam}.c2w
+        out: [w2c]
+      transform:
+        transform: [w2c]
+        points: [mesh.scaled_vertices]
+        out: [transformed_vertices]
       rotation3d:
-        tensor: [vertices]
+        tensor: [transformed_vertices] # [mesh.scaled_vertices]
         out: [rotation]
       rotate:
         rotation: [rotation]
-        points: [vertices]
+        points: [transformed_vertices] # [mesh.scaled_vertices]
         out: [rotated_vertices]
       opengl:
         points: [rotated_vertices]
-        translation: [null]
-        rotation: [null]
+        # translation: [cameras.01.c2w_T]
+        # rotation: [cameras.01.c2w_R]
         # image: [color]
-        nominal_image: [color]
+        # nominal_image: [color]
+        intrinsics: 
+          - cameras.${selected_cam}.K
         out: [ndc_vertices]
       mesh_silhouette:
         ndc_vertices: [ndc_vertices]
-        indices: [faces]
+        indices: [mesh.faces]
         out: [silhouette]
-      # ##################### STOP NVDIFFRAST
+      ##################### STOP NVDIFFRAST
       ##################### START PYTORCH3D
       # rotation3d:
       #   tensor: [vertices]
