--- a/moai/conf/model/monads/sampling/bilinear_downsample_x2.yaml
+++ b/moai/conf/model/monads/sampling/bilinear_downsample_x2.yaml
@@ -3,3 +3,4 @@
 _target_: moai.monads.sampling.BilinearDownsample_x2
 align_corners:  false
 recompute_scale_factor: false
+preserve_aspect_ratio: false
