--- a/moai/conf/model/monads/distribution/center_of_mass.yaml
+++ b/moai/conf/model/monads/distribution/center_of_mass.yaml
@@ -1,5 +1,5 @@
 # @package model.monads._name_
 
 _target_: moai.monads.distribution.CenterOfMass
-mode: default
+mode: default # one of ['default', 'default_optimized_2d']
 flip: true # whether to flip coords w.r.t grid coord order
