--- a/moai/conf/model/networks/lightning/factory/vae.yaml
+++ b/moai/conf/model/networks/lightning/factory/vae.yaml
@@ -2,40 +2,22 @@
 
 _target_: moai.networks.lightning.factory.VariationalAutoencoder
 configuration:
-  in_features: 3
-  out_features: 3
-  input: ???
-  output: generated
-  latent_dim: 128
-  hidden_dim: [32,64,128,356,512]
   repeat_val: 7
   traversal_len: 7
   traversal_step: 0.25
   traversal_dim: -1
   traversal_init_value: -0.75
-preproc:
-  convolution: 
-    type: conv2d
-    params:
-      kernel_size: 3
-      stride: 2
-      padding: 1
+  reparametrization:
+    latent_dim: 19
+    enc_out_dim: 256
+  linear:
+    type: ???
     activation:
-      type: bn2d_lrelu
-      params:
-        inplace: true
-  linear: 
-    type: linear
-    activation:
-      type: none
-  deconvolution:
-    type: deconv2d
-    params:
-      kernel_size: 3
-      stride: 2
-      padding: 1
-      output_padding: 1
-    activation:
-      type: bn2d_lrelu
-      params:
-        inplace: true
+      type: ???
+io:
+  encoder:
+    out: ???
+  reparametrization:
+    out: ???
+  decoder:  
+    out: ???
