--- a/moai/conf/examples/play_Fit3D/data.yaml
+++ b/moai/conf/examples/play_Fit3D/data.yaml
@@ -9,16 +9,19 @@ data:
       datasets:
         Fit3D:
           subjects: '**'
+          actions: '**'
           downsample_factor: 2
   test:
     iterator:
       datasets:
         Fit3D:
           subjects: '**'
+          actions: '**'
           downsample_factor: 5
   val:
     iterator:
       datasets:
         Fit3D:
           subjects: '**'
+          actions: '**'
           downsample_factor: 10
