--- a/moai/conf/data/train/dataset/human/Fit3D.yaml
+++ b/moai/conf/data/train/dataset/human/Fit3D.yaml
@@ -4,5 +4,6 @@ _target_: moai.data.datasets.human.Fit3D
 data_root: ${fit3d_root}
 smplx_root: ${smplx_root}
 subjects: '**'
+actions: '**'
 device: ${trainer.gpus}
 downsample_factor: 1
