--- a/moai/conf/engine/callbacks/interpolate_latent.yaml
+++ b/moai/conf/engine/callbacks/interpolate_latent.yaml
@@ -1,4 +1,5 @@
 # @package trainer.callbacks._name_
 
 _target_: moai.engine.callbacks.LatentInterp
-interpolate_epoch_interval: ???
+num_points: 25
+interpolate_epoch_interval: 1
