--- a/moai/conf/model/monads/masking/higher_than.yaml
+++ b/moai/conf/model/monads/masking/higher_than.yaml
@@ -1,6 +1,5 @@
 # @package model.monads._name_
 
-_target_: moai.monads.masking.Threshold
+_target_: moai.monads.masking.HigherThan
 value: ???
-comparison: lower
 dtype: float # byte or float, corresponding to a 'mask' or 'weights' attribute
