update normal estimation

--- a/moai/conf/examples/train_Pano3D/data.yaml
+++ b/moai/conf/examples/train_Pano3D/data.yaml
@@ -9,16 +9,16 @@ data:
     iterator:
       datasets:
         Pano3D:
-          types: [color, depth, color_up, depth_right]
+          types: [color, depth]
 
   test:
     iterator:
       datasets:
         Pano3D:
-          types: [color, depth, color_up, depth_right]
+          types: [color, depth]
 
   val:
     iterator:
       datasets:
         Pano3D:
-          types: [color, depth, color_up, depth_right]
+          types: [color, depth]
