--- a/moai/conf/examples/train_Pano3D/main.yaml
+++ b/moai/conf/examples/train_Pano3D/main.yaml
@@ -7,7 +7,7 @@ defaults:
   - engine: engine
   - engine/train: lightning
   - engine/modules: manual_seed
-  - engine/modules: clearml
+  # - engine/modules: clearml
   
   - engine/visualization: collection
   - engine/visualization/visdom: image2d
@@ -15,7 +15,7 @@ defaults:
   - engine/log/lightning: collection
   - engine/log/lightning/logger: visdom
   - engine/log/lightning/logger: tabular
-  - engine/log/lightning/logger: clearml
+  # - engine/log/lightning/logger: clearml
 
   - engine/checkpoint/lightning: default
 
