--- a/moai/conf/examples/train_Pano3D/main.yaml
+++ b/moai/conf/examples/train_Pano3D/main.yaml
@@ -16,7 +16,7 @@ defaults:
   - engine/log/lightning: collection
   - engine/log/lightning/logger: visdom
   - engine/log/lightning/logger: tabular
-  - engine/log/lightning/logger: clearml
+  # - engine/log/lightning/logger: clearml
 
   # - engine/checkpoint/lightning: default
 
@@ -35,7 +35,8 @@ defaults:
 
 # ###### MODEL
   - model/networks/lightning/factory: unet
-
+  - model/modules/unet: sqex
+  
   - model/feedforward: preprocess
   - model/monads/math: clamp
   - model/monads/masking: threshold
